Small fixes for responsiveness on small devices

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1105,7 +1105,6 @@ div#container-display-show {
 
 #showSelector {
     height:31px;
-    overflow: hidden;
     display: table-cell;
     left:20px;
     margin-top: 5px;
@@ -1166,6 +1165,10 @@ div#container-display-show {
 
     .container-navShow {
         display: none;
+    }
+
+    #key-padding {
+        padding-bottom: 4px;
     }
 }
 
@@ -1436,11 +1439,11 @@ ul.tags li a {
 }
 
 #checkboxControls {
-    padding-top: 1px;
+    padding-top: 2px;
 }
 
 #checkboxControls span {
-    padding: 2px 5px 2px 5px;
+    padding: 3px 10px 5px;
     font-size: 11px;
     font-weight: bold;
 }
@@ -2968,7 +2971,7 @@ fieldset[disabled] .navbar-default .btn-link:focus {
 }
 
 .input-sm-custom {
-    padding: 1px 5px 1px 5px;
+    padding: 2px 5px 3px;
     border-radius: 1px;
     line-height: 1.5;
     height: auto;
@@ -2976,6 +2979,7 @@ fieldset[disabled] .navbar-default .btn-link:focus {
 
 #sub-menu-container {
     z-index:550;
+    min-height: 41px;
 }
 
 .shadow {
@@ -4271,4 +4275,15 @@ css helper classes
 .backlog-quality {
     color: rgb(255, 255, 255);
     background-color: rgb(55, 55, 55);
+}
+
+#key-padding {
+    margin-left: 215px;
+}
+
+@media (max-width: 1700px) {
+    #key-padding {
+        margin-left: 0px;
+        margin-right: 5px;
+    }
 }
